Implement getuserlist method and fixing code formating and apply best practices